very minor editorial changes in the Rmarkdowns

--- a/app/Rmd/report_cetaceans_EN.Rmd
+++ b/app/Rmd/report_cetaceans_EN.Rmd
@@ -172,7 +172,8 @@ URL: <https://waves-vagues.dfo-mpo.gc.ca/Library/40869155.pdf>\
 Last retrieved on: April 1 2020 from Open Data <https://open.canada.ca/data/en/dataset/c094782e-0d6f-4cc0-b5a3-58908493a433>\
 Quality Tier: Medium\
 Search year: 1975-2015\
-Security level: none
+Security level: none\
+Data use constraints: none
 
 Dataset description from the Open Data record [@OpenData_cetacean_imp]: Species Distribution Models (SDM) were used to predict and identify priority areas for enhanced monitoring of cetaceans in eastern Canadian waters off Nova Scotia, Newfoundland and Labrador. This data set represents information presented in @Gomez2020SDM and includes sighting records and SDM outputs for ten cetacean species with sufficient records (n \> 450), as well as sightings only for an additional six species. Gomez et al. (2020) used a compilation of aerial- and vessel-based cetacean sightings data from 1975-2015, assembled in @Gomez2017SDM from a variety of sources. Note that sightings data from many of these sources were not effort-corrected, and apparent distribution patterns based on these opportunistic sightings data are biased by when and where survey activities were conducted. Unfavorable weather and reduced visual effort in winter, spring, and autumn likely account for the fewer sighting records in these seasons compared to summer. The dataset did not include dead animal, stranding, entanglement, or entrapment data. While some of the databases included records obtained during the whaling period (catches or sightings recorded prior to 1975), for all analyses/modelling conducted in that study, only sightings of free-swimming whales obtained during the post-whaling period (1975-2015) were used. Quality control checks included discarding all records outside of our study area and removing redundant records (identical species, day, month, latitude and longitude). The data used did not reflect any updates or corrections to the databases that have occurred since the data were compiled in 2016. Sightings are not available for download here; please contact the original data sources listed below to obtain raw sightings data. Gomez et al. (2020) represented an important initiative in eastern Canada to highlight key areas for cetacean monitoring in waters off Nova Scotia, Newfoundland and Labrador. Habitats with high suitability were interpreted as areas where cetacean monitoring efforts may be prioritized, and results can help direct future survey efforts. Model outputs used cetacean sightings from several decades and dynamic environmental predictors that used seasonal averages across multiple years. As proxies for prey availability, five predictor environmental variables were selected for the SDM: ocean depth, compound topographic index, sea surface temperature, areas of persistently high chlorophyll-a concentration, and regional chlorophyll-a magnitude. See Gomez et al. (2020) for further details on modelling methods. Persistent patterns over time (between 1975-2015) are the main patterns expected to be captured by these models. Further, SDM results presented were not the same as species density maps; rather, they portrayed predicted suitable habitat based on environmental characteristics and sightings data that were not always derived from effort-based surveys. Consequently, the use of these models in marine spatial planning processes should be accompanied by complementary approaches, such as acoustic and visual validation of the SDM results, as well as additional monitoring and modeling efforts. Please refer to Gomez et al. (2020) for examples on how to best use these data outputs. Future efforts will focus on using more recent data and improving these models to facilitate the inclusion of cetaceans in marine spatial planning processes that are currently underway.
 
@@ -210,7 +211,7 @@ Contact: [gddaiss-dmsaisb\@dfo-mpo.gc.ca](mailto:gddaiss-dmsaisb@dfo-mpo.gc.ca){
 URL: <https://waves-vagues.dfo-mpo.gc.ca/Library/40687776.pdf>\
 Last retrieved on: October 30 2020 from Open Data <https://open.canada.ca/data/en/dataset/8fafd919-fcbe-43a3-a911-3d9461273441>\
 Quality Tier: High\
-Security level: none
+Security level: none\
 Data use constraints: none
 
 Dataset description from the Open Data record [@OpenData_blue_imphabitat]: The distribution of Blue Whales (*Balaenoptera musculus*) is mainly dictated by key environmental drivers such as food requirements and availability, sea ice, and sometimes predation risks. It is common to find Blue Whales in upwelling regions, depending on topography (banks, slopes and shallow water) and thermal fronts, which are actually related to krill aggregations. Blue Whales feed almost exclusively on euphausiids (krill) and have the highest absolute metabolic demands. A shapefile on the distribution of significant perennial areas of krill aggregation is available (DFO-ECCC). Important habitats for Blue Whales have therefore been identified by combining information on their distribution with krill aggregation areas (observed or predicted). In the waters of the St. Lawrence estuary, the presence of Blue Whales for foraging, feeding and migration has been observed throughout the year, with increased activity during the summer. It has been observed that feeding rates of Blue Whales are higher in shallow waters and during nocturnal periods (krill at surface), confirming that foraging near the surface is beneficial when possible. Their presence, their great fidelity to this important habitat for their activities and their behavior in the waters of the St. Lawrence in all seasons, show that Blue Whales are vulnerable to oil spills. They are vulnerable, not only indirectly through the reduction of prey and loss of suitable habitat, but also by their behavior requiring active activity on the surface and near the coast. The data used to create the polygons using the bounding box method comes from multiple sources of information: hunting records, photo-identification, coastal, airborne and boat surveys, passive acoustic monitoring, radio and satellite telemetry, ice trapping, anecdotal observations and modeling.
@@ -258,7 +259,7 @@ Contact: [MaritimesRAP.XMAR\@dfo-mpo.gc.ca](mailto:MaritimesRAP.XMAR@dfo-mpo.gc.
 URL: <http://publications.gc.ca/collections/collection_2020/mpo-dfo/fs70-6/Fs70-6-2020-008-eng.pdf>\
 Last retrieved on: June 15 2021 from Open Data <https://open.canada.ca/data/en/dataset/9fd7d004-970c-11eb-a2f3-1860247f53e3>\
 Quality Tier: High\
-Security level: none
+Security level: none\
 Data use constraints: none
 
 The Scotian Shelf population of Northern Bottlenose Whales (*Hyperoodon ampullatus*) is listed as Endangered under Canada's Species at Risk Act. Partial critical habitat was identified for this population in the Recovery Strategy first published in 2010 [@DFO2016_recoverynbw], and three critical habitat areas were designated along the eastern Scotian Shelf, encompassing the Gully, Shortland Canyon, and Haldimand Canyon (shapefile available online: <https://open.canada.ca/data/en/dataset/db177a8c-5d7d-49eb-8290-31e6a45d786c>). However, the Recovery Strategy recognized that additional areas may constitute critical habitat for the population and recommended further studies based on acoustic and visual monitoring to assess the importance of inter-canyon areas as foraging habitat and transit corridors for Northern Bottlenose Whales.
