--- a/app/Rmd/report_SARA_EN.Rmd
+++ b/app/Rmd/report_SARA_EN.Rmd
@@ -26,9 +26,9 @@ Dataset description from the Open Data record [@OpenData_SARrange]: The Species 
 
 Contact: <info@dfo-mpo.gc.ca>  
 Last retrieved on: October 1 2020 from Open Data  <https://open.canada.ca/data/en/dataset/db177a8c-5d7d-49eb-8290-31e6a45d786c>  
-Quality Tier: High    
+Quality Tier: High\    
 Security level: none\    
-Data use constraints for critical habitat: none
+Data use constraints for critical habitat: none\
 Data use constraints for draft critical habitat: DFO INTERNAL USE ONLY
 
 Dataset description from the Open Data record [@OpenData_SARcriticalhabitat]: The Species at Risk Program is responsible for carrying out DFO’s mandate under the _Species at Risk Act_ (SARA) to protect, recover and conserve all listed aquatic Species at Risk in Canada. Critical habitat is identified for species listed as Endangered or Threatened under the _Species at Risk Act_ (SARA). Critical habitat is defined under section 2 of SARA as: “the habitat that is necessary for the survival or recovery of a listed wildlife species and that is identified as the species’ critical habitat in the recovery strategy or in an action plan for the species”. Section 49(1)(a) of SARA requires that a species’ Recovery Strategy/Action Plan include an identification of the species’ critical habitat to the extent possible, based on the best available information, including information provided by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC). SARA makes it illegal to destroy any part of the critical habitat of SAR and may impose restrictions on development and construction. Critical habitats were assembled by SARA regional biologists and recovery teams. They are designed to support the protection and recovery of species listed as Endangered or Threatened under the _Species at Risk Act_. They are also described and displayed in species’ Recovery Documents and Action Plans.
