--- a/app/Rmd/report_fish_FR.Rmd
+++ b/app/Rmd/report_fish_FR.Rmd
@@ -19,8 +19,8 @@ Description de l’ensemble de données (tirée du dossier des données ouvertes
 
 
 ```{r table-RV-read, echo=FALSE, cache=FALSE, include = FALSE}
-table_RV <- read.csv("../data/misc/table_RV_EN.csv")
-table_RV<- table_RV %>% dplyr::rename("Season/Months"=Season.Months,"Description of Geographic Range"=Description.of.Geographic.Range)
+table_RV <- read.csv("../data/misc/table_RV_FR.csv")
+table_RV<- table_RV %>% dplyr::rename("Enquête d' sur les navires"=Enquête.d..sur.les.navires,"Saison/mois"=Saison.mois,"Description de l’étendue géographique"= Description.de.l.étendue.géographique)
 ```
 ```{r RV-table-setup}
 knitr::kable(table_RV, align="l",
